--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,15 +1,16 @@
 /* cores
-Fresh 
-#F7F5E6
-Vermillion
-#333A56
-Sunshine
-#52658F
-Clean
-#E8E8E8
-*/
+paleta de cores para esse site especifico
+preto #332F3E
+verde claro #80C8B5
+verde escuro #4DB788
 
-h1 {
+fonts
+conteudo:
+titulo: Roboto
+
+*/
+@import url('https://fonts.googleapis.com/css2?family=Amita:wght@700&family=Courgette&family=Federo&family=Lobster&family=Poly&family=Press+Start+2P&family=Roboto:ital,wght@1,500&family=Shrikhand&display=swap');
+/* h1 {
     max-width: 500px;
     text-align: center;
     margin: 60px auto;
@@ -22,7 +23,7 @@ h1::after {
     margin-left: 5px;
     opacity: 1;
     animation: pisco .7s infinite;
-}
+} */
 
 
 *,
@@ -48,6 +49,7 @@ body {
   box-sizing: border-box; }
 
 .heading-primary {
+  font-family: 'Federo', sans-serif;
   color: #fff;
   text-transform: uppercase;
   backface-visibility: hidden;
@@ -73,6 +75,7 @@ body {
     animation-timing-function: ease-out; }
 
 .heading-secondary {
+  font-family: 'Lobster', cursive;
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
@@ -91,19 +94,59 @@ body {
   font-weight: 780;
   text-transform: uppercase; }
 
+
+
+
+  .heading-forth {
+    font-family: 'Lobster', cursive;
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    background-image: linear-gradient(to right, #fff, #fff);
+    -webkit-background-clip: text;
+    color: transparent;
+    letter-spacing: .2rem;
+    transition: all .2s; }
+    .heading-forth:hover {
+      transform: skewY(2deg) skewX(15deg) scale(1.1);
+      text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
 .paragraph {
-  font-size: 1.6rem; }
+  font-size: 1.6rem; 
+    z-index: 10;
+    transition: all .2s;
+    outline-offset: 2rem;
+  
+}
   .paragraph:not(:last-child) {
-    margin-bottom: 3rem; }
+    margin-bottom: 3rem; 
+  }
+  .paragraph:hover {
+    outline: 1.5rem solid #55c57a;
+      transform: scale(1.05) translateY(-0.5rem);
+
+      z-index: 20;
+  }
+.composition__photo:hover {
+    outline: 1.5rem solid #55c57a;
+    transform: scale(1.05) translateY(-0.5rem);
+    box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+    z-index: 20; }
+    .composition__photo:hover .composition__photo__photo:not(:hover) {
+      transform: scale(0.95);
+    }
 
 .u-center-text {
-  text-align: center !important; }
+  text-align: center !important;
+}
 
 .u-left-text {
-  text-align: left !important; }
+  text-align: left !important;
+}
 
 .u-margin-bottom-small {
-  margin-bottom: 1.5rem !important; }
+  margin-bottom: 1.5rem !important;
+}
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important; }
@@ -142,10 +185,10 @@ body {
     .btn--white::after {
       background-color: #fff; }
   .btn--green {
-    background-color: #414141;
+    background-color: #55c57a;
     color: #fff; }
     .btn--green::after {
-      background-color: #414141; }
+      background-color: #55c57a; }
   .btn::after {
     content: "";
     display: inline-block;
@@ -665,7 +708,7 @@ body {
 
 .section-features {
   padding: 20rem 0;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/nat-4.jpg);
+  background-image: linear-gradient(to right bottom, rgba(61, 77, 80, .8), rgba(0, 0, 0, .8)), url(../img/computer.jpg);
   background-size: cover;
   margin-top: -10rem;
   transform: skewY(-7deg); }
